# TKI-Remittance

./: Cargo.toml  README.md
contracts/notes/: Cargo.toml
contracts/notes/src/: lib.rs  test.rs
