[package]
name = "tki-remittance"
version = "0.1.0"
edition = "2021"

[lib]
name = "tki_remittance"
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }